Update TelegramLogger.java